--- a/Rossman_retail_store_regression_analysis.ipynb
+++ b/Rossman_retail_store_regression_analysis.ipynb
@@ -185,7 +185,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Krishanu-Saha/data-science/blob/main/Rossman_retail_store_regression_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Krishanu-Saha/ROSSMAN-RETAIL-STORE-REGRESSION-ANALYSIS/blob/main/Rossman_retail_store_regression_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -333,8 +333,8 @@
         "import statsmodels.formula.api as smf\n",
         "from statsmodels.graphics.regressionplots import plot_regress_exog\n",
         "from statsmodels.graphics.regressionplots import plot_leverage_resid2\n",
-        "from scipy.stats import zscore \n",
-        "from sklearn.preprocessing import StandardScaler \n",
+        "from scipy.stats import zscore\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "import pandas as pd\n",
         "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
         "from sklearn.linear_model import Ridge, Lasso\n",
@@ -562,7 +562,7 @@
       "source": [
         "# filling competition distance with the median value\n",
         "stores_df['CompetitionDistance'].fillna(stores_df['CompetitionDistance'].median(), inplace = True)\n",
-        "     "
+        ""
       ],
       "metadata": {
         "id": "W4T3fmLt0MHC"
@@ -590,7 +590,7 @@
         "stores_df['Promo2SinceWeek'].fillna(value=0,inplace=True)\n",
         "stores_df['Promo2SinceYear'].fillna(value=0,inplace=True)\n",
         "stores_df['PromoInterval'].fillna(value=0,inplace=True)\n",
-        "     "
+        ""
       ],
       "metadata": {
         "id": "Sb-jDPwA0tps"
@@ -603,7 +603,7 @@
       "source": [
         "#merge the datasets on stores data\n",
         "df = sales_df.merge(right=stores_df, on=\"Store\", how=\"left\")\n",
-        "     "
+        ""
       ],
       "metadata": {
         "id": "SYrt8rKS09R4"
@@ -616,7 +616,7 @@
       "source": [
         "#first five rows of the merged dataset\n",
         "df.head()\n",
-        "     "
+        ""
       ],
       "metadata": {
         "id": "hRZshLRJ1AsI"
@@ -795,7 +795,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Variables Description "
+        "### Variables Description"
       ],
       "metadata": {
         "id": "PBTbrJXOngz2"
@@ -957,11 +957,11 @@
       "cell_type": "markdown",
       "source": [
         "store A type : 54%\n",
-        " \n",
+        "\n",
         " store B type : 1.5%\n",
-        " \n",
+        "\n",
         " store C type : 13.3%\n",
-        " \n",
+        "\n",
         " store D type : 31.2%"
       ],
       "metadata": {
@@ -1255,7 +1255,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Mean customers per StoreType in StoreType B is highest.It may indicate it is in demand or as from the pie chart B Type store are lesser in number thats why the high demand. "
+        "Mean customers per StoreType in StoreType B is highest.It may indicate it is in demand or as from the pie chart B Type store are lesser in number thats why the high demand."
       ],
       "metadata": {
         "id": "jF7c4IkEng0N"
@@ -1350,7 +1350,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Graph 1 : Mean Sales vs Dayofweek** : Mean Sales are highest in day 1 and day 7 , and lowest in day 6 . This may indicate that people wait for the Hoilday to come and go for shopping. "
+        "**Graph 1 : Mean Sales vs Dayofweek** : Mean Sales are highest in day 1 and day 7 , and lowest in day 6 . This may indicate that people wait for the Hoilday to come and go for shopping."
       ],
       "metadata": {
         "id": "mx7yUMFEq2uS"
@@ -1386,7 +1386,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Graph 5 : Mean Sales vs StoreType** Means Sales are highest in StoreType b ,it can result into greater yield in profit. "
+        "**Graph 5 : Mean Sales vs StoreType** Means Sales are highest in StoreType b ,it can result into greater yield in profit."
       ],
       "metadata": {
         "id": "P44VyhCssKua"
@@ -1395,7 +1395,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Graph 6 : Mean Sales vs Assortment** Means Sales are higher in stores which have assortments of Type b. "
+        "**Graph 6 : Mean Sales vs Assortment** Means Sales are higher in stores which have assortments of Type b."
       ],
       "metadata": {
         "id": "ncZSizW4sNMa"
@@ -1404,7 +1404,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Graph 7 : Mean Sales vs CompetitionOpenSinceMonth** There isn't much variation in Mean Sales with CompetitionOpenSinceMonth. "
+        "**Graph 7 : Mean Sales vs CompetitionOpenSinceMonth** There isn't much variation in Mean Sales with CompetitionOpenSinceMonth."
       ],
       "metadata": {
         "id": "X7z6DtzisMF6"
@@ -1467,7 +1467,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Graph 14 : Mean Sales vs Promo2sinceweek** Mean sales are higher towards the end of the year.mainly in Oct, Nov and Dec. "
+        "**Graph 14 : Mean Sales vs Promo2sinceweek** Mean sales are higher towards the end of the year.mainly in Oct, Nov and Dec."
       ],
       "metadata": {
         "id": "rEBh3d5L8GiJ"
@@ -1600,7 +1600,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The time frame between 10-12 month period is where we can expect increase in sales. "
+        "The time frame between 10-12 month period is where we can expect increase in sales."
       ],
       "metadata": {
         "id": "nobhJ1lG_2Xw"
@@ -1621,7 +1621,7 @@
       "cell_type": "code",
       "source": [
         "num_columns = [ 'DayOfWeek', 'Sales', 'Customers',  'CompetitionDistance', 'CompetitionOpenSinceMonth', 'CompetitionOpenSinceYear', 'Year', 'Month', 'WeekOfYear',  'DayOfYear']\n",
-        "        \n",
+        "\n",
         " # Create a correlation matrix of the numerical columns\n",
         "correlation_matrix = data[num_columns].corr()\n",
         "\n",
@@ -1633,8 +1633,8 @@
         "plt.title('Correlation Heatmap')\n",
         "\n",
         "# Display the plot\n",
-        "plt.show()      \n",
-        "     "
+        "plt.show()\n",
+        ""
       ],
       "metadata": {
         "id": "xqlVkgMqOiHg"
@@ -1672,7 +1672,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### HYPOTHESIS TESTING "
+        "### HYPOTHESIS TESTING"
       ],
       "metadata": {
         "id": "9y_BUE5TSMix"
@@ -1930,7 +1930,7 @@
         "  except Exception:\n",
         "    return 0\n",
         "\n",
-        "#Applying \n",
+        "#Applying\n",
         "df1['Promo2Open'] = df1.apply(promo2running,axis=1)*df1['Promo2']\n",
         "\n",
         "#Dropping unecessary columns\n",
@@ -2162,13 +2162,13 @@
         "def get_vif_factors(X):\n",
         "  #converting to dataframe to a matrix\n",
         "  X_matrix = X.to_numpy()\n",
-        "  #Using list comprehension to store vif of each variable \n",
+        "  #Using list comprehension to store vif of each variable\n",
         "  vif = [ variance_inflation_factor(X_matrix,i) for i in range(X.shape[1])]\n",
         "  #Creating an empty dataframe.\n",
         "  vif_factors = pd.DataFrame()\n",
-        "  #Storing columns name \n",
+        "  #Storing columns name\n",
         "  vif_factors['column'] = X.columns\n",
-        "  #Storing corresponding vifs \n",
+        "  #Storing corresponding vifs\n",
         "  vif_factors['vif'] = vif\n",
         "\n",
         "  return vif_factors"
@@ -2247,7 +2247,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "No multicollinearity detected "
+        "No multicollinearity detected"
       ],
       "metadata": {
         "id": "zg6ZbmBdlM-F"
@@ -2323,7 +2323,7 @@
       "source": [
         "To improve the accuracy of a machine learning model, it is important to identify any predictor variables that may not have a significant impact on the target variable, which in your case is the 'Sales' column. One way to do this is by examining the model summary and identifying variables with high p-values.\n",
         "\n",
-        "Another important consideration is multicollinearity, which occurs when predictor variables are highly correlated with one another. To check for multicollinearity, we calculated the Variance Inflation Factor (VIF) for each variable. A high VIF value, generally considered to be greater than 4, suggests that a variable may be contributing to multicollinearity. To investigate these variables further, we created a heatmap to visualize their relationships with other variables in the model. This helped us gain a better understanding of which variables may need to be modified or removed to improve model performance. "
+        "Another important consideration is multicollinearity, which occurs when predictor variables are highly correlated with one another. To check for multicollinearity, we calculated the Variance Inflation Factor (VIF) for each variable. A high VIF value, generally considered to be greater than 4, suggests that a variable may be contributing to multicollinearity. To investigate these variables further, we created a heatmap to visualize their relationships with other variables in the model. This helped us gain a better understanding of which variables may need to be modified or removed to improve model performance."
       ],
       "metadata": {
         "id": "DRyyqDemtAOm"
@@ -2380,17 +2380,17 @@
         "def draw_pp_plot(model, title):\n",
         "    # Create a probability plot object for the model residuals\n",
         "    probplot = sm.ProbPlot(model.resid)\n",
-        "    \n",
+        "\n",
         "    # Set the size of the plot\n",
         "    plt.figure(figsize=(8, 6))\n",
-        "    \n",
+        "\n",
         "    # Create a probability plot (pp) plot of the model residuals\n",
         "    # with a line at 45 degrees (representing a normal distribution)\n",
         "    probplot.ppplot(line='45')\n",
-        "    \n",
+        "\n",
         "    # Set the plot title\n",
         "    plt.title(title)\n",
-        "    \n",
+        "\n",
         "    # Show the plot\n",
         "    plt.show()"
       ],
@@ -2403,7 +2403,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#Calling draw_pp_plot function \n",
+        "#Calling draw_pp_plot function\n",
         "draw_pp_plot(model_2,\"Normal P-P Plot of Regression Standardized Residuals\")"
       ],
       "metadata": {
@@ -2447,14 +2447,14 @@
         "def get_standardized_values(vals):\n",
         "    # Calculate the mean of the input values\n",
         "    mean = vals.mean()\n",
-        "    \n",
+        "\n",
         "    # Calculate the standard deviation of the input values\n",
         "    std_dev = vals.std()\n",
-        "    \n",
+        "\n",
         "    # Calculate the standardized values of the input values by\n",
         "    # subtracting the mean and dividing by the standard deviation\n",
         "    standardized_vals = (vals - mean) / std_dev\n",
-        "    \n",
+        "\n",
         "    # Return the standardized values\n",
         "    return standardized_vals"
       ],
@@ -2470,22 +2470,22 @@
         "def plot_resid_fitted(fitted, resid, title):\n",
         "    # Calculate the standardized predicted values by calling the get_standardized_values() function on the fitted values\n",
         "    standardized_fitted = get_standardized_values(fitted)\n",
-        "    \n",
+        "\n",
         "    # Calculate the standardized residuals by calling the get_standardized_values() function on the residual values\n",
         "    standardized_resid = get_standardized_values(resid)\n",
-        "    \n",
+        "\n",
         "    # Create a scatter plot of the standardized residuals against the standardized predicted values\n",
         "    plt.scatter(standardized_fitted, standardized_resid)\n",
-        "    \n",
+        "\n",
         "    # Set the plot title\n",
         "    plt.title(title)\n",
-        "    \n",
+        "\n",
         "    # Set the x-axis label\n",
         "    plt.xlabel(\"Standardized predicted values\")\n",
-        "    \n",
+        "\n",
         "    # Set the y-axis label\n",
         "    plt.ylabel(\"Standardized residuals values\")\n",
-        "    \n",
+        "\n",
         "    # Show the plot\n",
         "    plt.show()\n",
         "\n",
@@ -2500,7 +2500,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Residual Plot for Homoscedasticity and Model Specification "
+        "Residual Plot for Homoscedasticity and Model Specification"
       ],
       "metadata": {
         "id": "rSMQEx8dQN1-"
@@ -2705,7 +2705,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**INSIGHTS** : Now the data is normally distributed. A normally distributed target variable is important in linear regression to ensure the validity of statistical tests, accurate parameter estimation, accurate predictions, and reliable model interpretation. \n"
+        "**INSIGHTS** : Now the data is normally distributed. A normally distributed target variable is important in linear regression to ensure the validity of statistical tests, accurate parameter estimation, accurate predictions, and reliable model interpretation.\n"
       ],
       "metadata": {
         "id": "1WZiEziG57aC"
@@ -2816,7 +2816,7 @@
       "source": [
         "#Initializing the StandardScaler\n",
         "X_scaler = StandardScaler()\n",
-        "#Standardizie all the feature columns \n",
+        "#Standardizie all the feature columns\n",
         "X_scaled = X_scaler.fit_transform(df4[index2])\n",
         "\n",
         "#Standardizing Y by explicitly by substracting mean and divding by standard deviation\n",
@@ -2905,7 +2905,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### What data splitting ratio have you used and why? "
+        "##### What data splitting ratio have you used and why?"
       ],
       "metadata": {
         "id": "qjKvONjwE8ra"
@@ -2971,7 +2971,7 @@
       "source": [
         "\n",
         "def calculate_metrics(model_name, model, x_train, x_test, y_train, y_test):\n",
-        "   \n",
+        "\n",
         "    # Make predictions on the training and test sets\n",
         "    y_train_pred = model.predict(x_train)\n",
         "    y_test_pred = model.predict(x_test)\n",
@@ -3624,7 +3624,7 @@
       "source": [
         "#evaluating metrics\n",
         "metrics_7 = calculate_metrics('Gradient Boosting Regressor',gbr,x_train, x_test, y_train, y_test)\n",
-        "metrics_7 "
+        "metrics_7"
       ],
       "metadata": {
         "id": "Ce2LGiIx0pcE"
@@ -3714,21 +3714,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I would chose Ridge regression as my final prediction model.\n",
+        "I would chose gradient boosting regressor as my final prediction model.\n",
         "\n",
-        "There are several advantages to choosing Ridge Regression as a final prediction model:\n",
+        "Gradient Boosting Regressor, a popular machine learning algorithm, offers several benefits:\n",
         "\n",
-        "Ridge Regression is a regularized linear regression technique that can help prevent overfitting, which is a common problem in machine learning.\n",
+        "1. **Strong Predictive Power:** Gradient Boosting Regressor combines the predictive power of multiple weak learners (usually decision trees) to create a strong predictive model. It can capture complex relationships between variables and produce accurate predictions.\n",
         "\n",
-        "It can handle a large number of features, and even features that are correlated with each other.\n",
+        "2. **Handles Different Data Types:** Gradient Boosting Regressor can handle a variety of data types, including numerical and categorical variables. It automatically handles missing values and does not require extensive data preprocessing.\n",
         "\n",
-        "Ridge Regression can perform well in situations where there is a small amount of training data available.\n",
+        "3. **Feature Importance:** The algorithm provides a measure of feature importance, indicating which features have the most significant impact on the prediction. This information is valuable for feature selection and understanding the underlying data patterns.\n",
         "\n",
-        "It has a closed-form solution, which means that it can be solved analytically and doesn't require expensive iterative optimization algorithms.\n",
+        "4. **Robust to Outliers:** Gradient Boosting Regressor can handle outliers effectively due to its ensemble nature. It reduces the impact of outliers by combining multiple weak learners, thereby increasing the robustness of the model.\n",
         "\n",
-        "Ridge Regression is also relatively simple and easy to understand, which can be useful for explaining the model to non-technical stakeholders.\n",
+        "5. **Flexible and Customizable:** Gradient Boosting Regressor offers flexibility in model configuration. You can tune hyperparameters such as the learning rate, number of estimators (weak learners), and maximum depth of the trees to optimize the model's performance for specific tasks.\n",
         "\n",
-        "Based on these advantages, Ridge Regression can be a good choice for a final prediction model in many situations."
+        "6. **Less Prone to Overfitting:** By using techniques such as regularization and early stopping, Gradient Boosting Regressor mitigates the risk of overfitting. It generalizes well to unseen data, reducing the chances of model memorization.\n",
+        "\n",
+        "7. **Handles Nonlinear Relationships:** Gradient Boosting Regressor is capable of capturing nonlinear relationships between variables. It automatically constructs a complex model by combining multiple weak learners, enabling it to learn and represent nonlinear patterns in the data.\n",
+        "\n",
+        "8. **Interpretability:** Although Gradient Boosting Regressor is an ensemble model, it still provides some level of interpretability. You can interpret the feature importance and understand how each feature contributes to the overall prediction.\n",
+        "\n",
+        "9. **Wide Range of Applications:** Gradient Boosting Regressor is widely used in various domains, including finance, healthcare, marketing, and more. It can be applied to regression problems where predicting continuous numerical values is required.\n",
+        "\n",
+        "Overall, Gradient Boosting Regressor offers a powerful and flexible framework for regression tasks, providing accurate predictions and insights into the underlying data relationships."
       ],
       "metadata": {
         "id": "6ksF5Q1LKTVm"
